fixes overflow when the +1 marker is present

--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ footer > a {
 }
 
 #container {
-  max-width: 540px;
+  max-width: 560px;
   margin: 0 auto;
   text-align: center;
 }
